# peregrine

./: Cargo.toml  DESIGN.md  README.md  clippy.toml  todo.txt
crates/peregrine-core/: Cargo.toml
crates/peregrine-core/src/: config.rs  dtype.rs  lib.rs  pack.rs  qt.rs  safetensors.rs
crates/peregrine-cuda/: Cargo.toml  build.rs
crates/peregrine-cuda/src/: lib.rs
crates/peregrine-engine/: Cargo.toml
crates/peregrine-engine/src/: main.rs
crates/peregrine-io/: Cargo.toml
crates/peregrine-io/src/: cache.rs  lib.rs  ring.rs  tier.rs
crates/peregrine-kernels/: Cargo.toml
crates/peregrine-kernels/src/: idot.rs  lib.rs  matmul.rs  quant.rs
crates/peregrine-model/: Cargo.toml
crates/peregrine-model/src/: attention.rs  concurrent.rs  lib.rs  math.rs  mlp.rs  model.rs  mtp.rs  router.rs  sample.rs  testkit.rs  weight.rs
crates/peregrine-sched/: Cargo.toml
crates/peregrine-sched/src/: lib.rs  reconstruct.rs
cuda/: backend_cuda.cu  backend_cuda.h
tools/: run_glm.py
