[package]
name = "peregrine-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "colibrì engine core: config, safetensors index, quantized-tensor formats, dtype conversion"

[dependencies]
serde_json.workspace = true
peregrine-io = { path = "../peregrine-io" }
thiserror = "2"
parking_lot = "0.12"
