[package]
name = "peregrine-io"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "colibrì expert streaming: io_uring reactor (I/O lane), slab arena, LRU cache + pinned hot-store with LFRU tiering"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"
