[package]
name = "peregrine-model"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "colibrì GLM-5.2 forward pass: MLA attention, sigmoid router, MoE, and (later) the concurrent scheduler"

[dependencies]
peregrine-core = { path = "../peregrine-core" }
peregrine-kernels = { path = "../peregrine-kernels" }
serde_json.workspace = true
