[package]
name = "peregrine-model"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "colibrì GLM-5.2 forward pass: MLA attention, sigmoid router, MoE, and (later) the concurrent scheduler"

[dependencies]
peregrine-core = { path = "../peregrine-core" }
peregrine-kernels = { path = "../peregrine-kernels" }
peregrine-io = { path = "../peregrine-io" }
serde_json.workspace = true
bytemuck = "1"
parking_lot = "0.12"
crossbeam-channel = "0.5"
