[package]
name = "peregrine-sched"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "colibrì concurrent MoE scheduler: overlap io_uring expert streaming (SSD) with CPU expert compute (RAM)"

[dependencies]
peregrine-core = { path = "../peregrine-core" }
peregrine-kernels = { path = "../peregrine-kernels" }
peregrine-model = { path = "../peregrine-model" }
peregrine-io = { path = "../peregrine-io" }
